src2/objects/Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Accessory_Lot_Code__c</fullName>
        <label>Accessory Lot Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accessory Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Follow Up (Accessory Product)</relationshipLabel>
        <relationshipName>Follow_Up2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Follow Up</relationshipLabel>
        <relationshipName>Follow_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Machine_GTIN__c</fullName>
        <formula>Asset__r.Product2.ExternalId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Machine GTIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Machine_Id__c</fullName>
        <formula>Asset__r.Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Machine Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Machine_Legacy_Id__c</fullName>
        <formula>Asset__r.Product2.Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Machine Legacy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Machine_Serial_Number__c</fullName>
        <formula>Asset__r.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Machine Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Follow Up</relationshipLabel>
        <relationshipName>Follow_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B2C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Code__c</fullName>
        <label>Product Batch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Before_Date__c</fullName>
        <label>Product Best Before Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Follow Up</relationshipLabel>
        <relationshipName>Follow_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Club_Remark__c</fullName>
        <label>Club Remark</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coffee_Lot_Code__c</fullName>
        <label>Coffee Lot Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coffee_Lot_Time__c</fullName>
        <label>Coffee Lot Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Coffee_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coffee Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Follow Up</relationshipLabel>
        <relationshipName>Follow_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <label>Event Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow Up Matrix</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Event_Matrix__c.Type__c</field>
                <operation>equals</operation>
                <value>Follow-up</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Event_Matrix__c</referenceTo>
        <relationshipLabel>Follow Up</relationshipLabel>
        <relationshipName>Follow_Up</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine_Product_Legacy_Id__c</fullName>
        <formula>Machine_Product__r.Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Product Legacy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Follow Up (Machine Product)</relationshipLabel>
        <relationshipName>Follow_Up1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_GTIN__c</fullName>
        <formula>Product__r.ExternalId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product GTIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Legacy_Id__c</fullName>
        <formula>Product__r.Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Legacy Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Follow Up (Product)</relationshipLabel>
        <relationshipName>Follow_Up3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Place__c</fullName>
        <label>Purchase Place</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_For_Analysis__c</fullName>
        <label>Sample For Analysis</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Quantity__c</fullName>
        <label>Sample Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Unit__c</fullName>
        <label>Sample Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Code__c</fullName>
        <label>Sender Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Engage Plus</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Telemetry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Follow Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Code__c</columns>
        <columns>Best_Before_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Back_Office_Customer_Care_Follow_Up</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Care</label>
        <queue>Back_Office_Customer_Care</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Follow Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow Up</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>